# bootloader

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
src/common/: log.rs  mod.rs  paging.rs
src/efi/: alloc.rs  boot.rs  logger.rs  mod.rs  runtime.rs  system.rs
src/efi/protocol/: graphics.rs  io.rs  loaded_image.rs  mod.rs  simple_fs.rs
