[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf-loader = { path = "../elf-loader", version = "0.1.0" }

[[bin]]
name = "bootx64"
path = "src/main.rs"

[profile.dev]
debug = 2
split-debuginfo = "off"
strip = "none"