[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf-loader = { git = "https://github.com/nightloewe1/elf-loader", version = "0.2.1" }

[[bin]]
name = "bootx64"
path = "src/main.rs"

[profile.dev]
panic = "abort"